# Dental-Appointment-Booking-Agent

./: .gitignore  README.md  daily_progress.md  package-lock.json
Week 1/Arun/: .env  README.md  daily_progress.md  pydanticTest.py  pyproject.toml
Week 1/Arun/Archive/: testembed.py
Week 1/Arun/Archive/HelloWorldRAG/: agent.py
Week 1/Arun/backend/: .env  agent.py  credentials.json  main.py  token.json
Week 1/Arun/backend/app/: create_rag_indexes.py  google_calendar.py  ingest_clinic_knowledge.py  ingest_general_dental_knowledge.py  models.py  persistence.py  pinecone_client.py  user_memory.py
Week 1/Arun/backend/app/llm/: agent.py
Week 1/Arun/frontend/: package-lock.json  package.json
Week 1/Arun/frontend/src/: App.css  App.jsx
Week 1/Vibha/: .env  Readme.md  package-lock.json
Week 1/Vibha/backend/: agent.py  main.py
Week 1/Vibha/frontend/: index.html
Week 1/Vibha/frontend/src/: Chat.jsx  api.js  styles.css
backend/: quickstart.py  test_agent.py
backend/app/: create_rag_indexes.py  google_calendar.py  ingest_clinic_knowledge.py  persistence.py  rate_limit.py
backend/app/llm/: agent.py
frontend/public/: index.html
